--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body><!-- Content delivery network -->
-    <p>Here is a change</p>
+    <p>Here is a changed P tag</p>
     <div id="app">
         {{ message }}
     </div>
