--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body><!-- Content delivery network -->
-    <p>Here is a changed P tag</p>
-    
+    <p>Here is another changed P tag</p>
+
     <div id="app">
         {{ message }}
     </div>
