--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body><!-- Content delivery network -->
-    <p>Here is another changed P tag</p>
+    <p>Commit to new branch</p>
 
     <div id="app">
         {{ message }}
